fix: Align items on dashboard

--- a/src/components/Masonry.module.scss
+++ b/src/components/Masonry.module.scss
@@ -2,13 +2,10 @@
 
 .masonry {
   @include flex;
+  align-items: stretch;
 
   @include mobile {
     flex-direction: column;
-  }
-
-  @include desktop {
-    align-items: stretch;
   }
 }
 
